--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -17,6 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
+  overflow-x: hidden;
 }
 
 @layer utilities {
@@ -52,4 +53,41 @@ body {
   src: url("../public/fonts/Poppins-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
+}
+
+@media (min-width: 768px) {
+  ::-webkit-scrollbar {
+    display: block;
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 5px;
+    fill-opacity: 20;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #37373f;
+    border-radius: 10px;
+    /* border: 0.5px solid #006582; Adding border to the scrollbar thumb */
+  }
+}
+
+/* Hide scrollbar for < lg screens */
+@media (max-width: 767px) {
+  /* For Webkit (Chrome, Safari, Edge) */
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* For Firefox */
+  html {
+    scrollbar-width: none;
+  }
+
+  /* For Internet Explorer and Edge */
+  body {
+    -ms-overflow-style: none;
+  }
 }
