--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,6 +18,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
 }
 
 @layer utilities {
@@ -83,11 +84,13 @@ body {
   /* For Firefox */
   html {
     scrollbar-width: none;
-  }
+    overflow-y: scroll;
+  } 
 
   /* For Internet Explorer and Edge */
   body {
     -ms-overflow-style: none;
+    font-family: "Poppins", sans-serif;
   }
 }
 @layer base {
